--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,6 +17,7 @@ jobs:
         name: Build & push Docker image
         with:
           image: jcohenp/ctera-app
+          tags: v1, latest
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
