--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,11 +4,7 @@ on:
   push:
     branches:
       - main
-    tags: [ v* ]
-env:
-  REGISTRY: docker.io
-  IMAGE_NAME: cohenp/ctera-app
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,24 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Log into the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Extract metadata for the Docker image
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
       - uses: mr-smithers-excellent/docker-build-push@v6
         name: Build & push Docker image
         with:
-          tags: ${{ steps.meta.outputs.tags }}
-          image: ${{ env.IMAGE_NAME }}
-          registry: ${{ env.REGISTRY }}
+          tags: v1, latest
+          image: jcohenp/ctera-app
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
