--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: mr-smithers-excellent/docker-build-push@v6
         name: Build & push Docker image
         with:
-          tags: v1, latest
+          tags: $(date +%s), latest
           image: jcohenp/ctera-app
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
